# solana-aggregator

./: Cargo.toml  README.md  table.sql
src/: main.rs  model.rs  workers.rs
