[package]
name = "solana-aggregator"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
chrono = "0.4.38"
env_logger = "0.11.5"
log = "0.4.22"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
solana-client = "2.0.3"
solana-sdk = "2.0.2"
solana-transaction-status = "2.0.3"

tokio = "1.39.1"
# tokio-postgres = { version = "0.7.11", features = ["with-uuid-1"] }

